pgcenter (devel) unstable; urgency=low

  * allow to save current stat context into conninfo file (~/.pgcenterrc).
  * implement parsetr() as the fast replacement for sscanf().
  * refactoring: remove unnecessary variable from tab_s struct.
  * refactoring: remove redundant loop+case from init_tabs().
  * add system stats.
  * add handling for RHEL-specific postgres paths.
  * move the sources into src/ dir.
  * add -Wextra, -Wfloat-equal into Makefile and fix collateral warnings.
  * refactoring internal color management.
  * add new bufsize macros, increase line bufsize in read_diskstats().
  * add PVS-Studio comments, fix issues generated by PVS.
  * rename screens/consoles entities to more convenient name - tabs.
  * fix build errors on Ubuntu
  * split single file to many; collapse excessive comments.
  * add max_connections info into activity string.
  * rewrite check_string() function.
  * fix float sorting -- issues #29.
  * reduce size of memory allocations for data arrays.
  * fix bufsize in set_filter().

 -- Alexey Lesovsky <lesovsky@gmail.com>  Sat, 01 Oct 2016 13:23:00 +0500

pgcenter (0.3.0) unstable; urgency=low

  * print static program name in title instead of argv[0].
  * exclude (auto)vacuum tasks accounting in xact_maxtime field.
  * fix runglish, typos and cosmetic changes.
  * change long queries min age from 500ms to 0ms.
  * replace min() and max() functions with macros.
  * add filtration feature.
  * allow to use connection settings from libpq env vars.
  * add install-man section into Makefile.
  * fix torn multiline records in log tail.
  * use qsort_r() instead of hand-made sorting.
    - many improvements in arrays functions (diff, sort);
    - queries use it's own order now (user can't change 'ORDER BY' in query);
    - sorting available for all columns now.
  * remove unnecessary WHERE from pg_stat_statements queries.
  * fix segfault, when diskstats/net are failed to read at startup.