@@ -430,14 +430,17 @@ Statistics from
 system view which will contain one row per WAL sender process, showing statistics about replication to that sender's connected standby server. Only directly connected standbys are listed; no information is available about downstream standby servers.
 .nf
 Used query: SELECT
-	        client_addr AS client, usename AS user, application_name AS name,
-        	state, sync_state AS mode,
-	 	(pg_xlog_location_diff(pg_current_xlog_location(),sent_location) / 1024)::int as pending,
-	        (pg_xlog_location_diff(sent_location,write_location) / 1024)::int as write,
-        	(pg_xlog_location_diff(write_location,flush_location) / 1024)::int as flush,
-	        (pg_xlog_location_diff(flush_location,replay_location) / 1024)::int as replay,
-        	(pg_xlog_location_diff(pg_current_xlog_location(),replay_location))::int / 1024 as total_lag
-	    FROM pg_stat_replication"
+                client_addr AS client, usename AS user, application_name AS name,
+                state, sync_state AS mode,
+                (pg_xlog_location_diff(pg_current_xlog_location(),'0/0') / 1024)::bigint as pending,
+                (pg_xlog_location_diff(pg_current_xlog_location(),sent_location) / 1024)::bigint as pending,
+                (pg_xlog_location_diff(sent_location,write_location) / 1024)::bigint as write,
+                (pg_xlog_location_diff(write_location,flush_location) / 1024)::bigint as flush,
+                (pg_xlog_location_diff(flush_location,replay_location) / 1024)::bigint as replay,
+                (pg_xlog_location_diff(pg_current_xlog_location(),replay_location))::bigint / 1024 as total_lag,
+                (pg_last_committed_xact()).xid::text::bigint - backend_xmin::text::bigint as xact_age,
+                date_trunc('seconds', (pg_last_committed_xact()).timestamp - pg_xact_commit_timestamp(backend_xmin)) as time_age
+            FROM pg_stat_replication"
 .fi
 
 .B client
@@ -466,6 +469,11 @@ Current WAL sender state.
 Synchronous state of this standby server.
 .RE
 
+.B xlog
+.RS
+Amount of the transaction logs in kilobytes, currently generated by postgres (per second).
+.RE
+
 .B pending
 .RS
 Difference between XLOG current position and XLOG sent position, shows amount of XLOG in kilobytes which should be sent over network.
@@ -489,6 +497,16 @@ Difference between XLOG flush position and XLOG replay position, shows amount of
 .B total_lag
 .RS
 Difference between XLOG current position on the master server and XLOG replay position onremote host, shows the total amount of XLOG in kilobytes, the standby is behind.
+.RE
+
+.B xact_age
+.RS
+Age (measured in transactions) of the longest query currently running on the connected standby server. This available since 9.5 version and requires enabled options \fBhot_standby_feedback\fR and \fBtrack_commit_timestamp\fR to on. An update interval also depends on \fBwal_receiver_status_interval\fR value, which is 10 seconds by default. High values here mean that there is an active query on the standby which may potentially cause replication lag or defer autovacuum and that able to causes bloat of tables and indexes. 
+.RE
+
+.B time_age
+.RS
+Age (measured in time) of the longest query currently running on the connected standby server. This available since 9.5 version and requires enabled options \fBhot_standby_feedback\fR and \fBtrack_commit_timestamp\fR to on. An update interval also depends on \fBwal_receiver_status_interval\fR value, which is 10 seconds by default. This metric is similar to xact_age but pronounced in human-understandable time and shows real age of the longest query running on the standby. It can be used with xact_age, when xact_age is high, recheck time_age and if time_age is low, probably there is no problem.
 .RE
 .RE
 
